# localflagalgebras

./: .gitignore  DaveyThesis2024.lean  LICENSE  README.md  RESULTS.md  lake-manifest.json  lakefile.toml  requirements.txt
DaveyThesis2024/: AsymSecCertificate.lean  (+50 more)
local-flags-certificates/: .gitignore  Cargo.toml  Makefile  README.md  emit_lean_cert.py  param.csdp  sec_basis_size5_bipartite.txt  sec_basis_size5_general.txt  solve_sdpa_cvxpy.py  solve_sdpa_scs.py
local-flags-certificates/examples/: asymmetric_bipartite_dump_coeffs.rs  asymmetric_bipartite_dump_constraints.rs  asymmetric_bipartite_dump_flags.rs  asymmetric_bipartite_strong_density.rs  asymmetric_bipartite_strong_density_sweep.rs  bipartite_strong_density.rs  bipartite_strong_edge_colouring.rs  bounded_pentagon.rs  bounded_pentagon_alt_approach.rs  bruhn_joos.rs  dump_sec_size5.rs  strong_edge_colouring.rs
local-flags-certificates/pentagon_search/: pentagon_counter.py  phase0_known_graphs.py  phase1_extremal_search.py  phase2_geng_sweep.sh  phase4_broad_search.py
local-flags-certificates/rust-flag-algebra/: .gitignore  Cargo.toml  Makefile  README.md  sdpa_parse.py
local-flags-certificates/sec_search/: .gitignore  README.md  compute_chi_s.py  emergency_cleanup.sh  fast_check.c  fast_check.py  parallel_sweep.sh  run_d17_d20.sh  run_d17_d20_resume.sh  run_d9_d16.sh  run_d9_d16_v2.sh  run_one_row.sh  run_sec_asym.sh  run_sec_asym_resume.sh  sat_check.py  sec_counterexample_results.md  second_solver_verification.md  sweep.py  verify_sec_cert.py
local-flags-certificates/src/: degree.rs  lib.rs
(+422 files in other folders)
